Get contacts endpoint implemented
