# documentation/openapi.yaml
@@ -371,6 +371,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/ResponseMessage'
 
+  /messages/users:
+    get:
+      tags: 
+        - messages
+      summary: Gets all the contacts of the authenticated user.
+      description: Gets all the users that have received or sent a message to the authenticated user.
+      security:
+        - BearerAuth: []
+      responses:
+        "200":
+          description: List of contacts.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseListUserWithId'
+
 
 components:
   securitySchemes:
